[gd_scene load_steps=11 format=3 uid="uid://c5f0wfx25glsh"]

[ext_resource type="Script" path="res://pages/workshop/part_controls/part_controls.gd" id="1_dn1f3"]
[ext_resource type="Shader" path="res://pages/workshop/part_outline.gdshader" id="2_1py4e"]
[ext_resource type="Texture2D" uid="uid://b3bm4djf5tas8" path="res://assets/images/part_example.png" id="3_6h11j"]
[ext_resource type="Texture2D" uid="uid://dh6ypsv6d5wqq" path="res://pages/workshop/part_controls/hexagon_button.png" id="4_y4x1s"]
[ext_resource type="Texture2D" uid="uid://sk3om7028qo4" path="res://pages/workshop/part_controls/hexagon_button_pressed.png" id="5_tnput"]
[ext_resource type="Texture2D" uid="uid://cxngr55sbrtc6" path="res://pages/workshop/part_controls/hexagon_button_hovered.png" id="6_usps7"]
[ext_resource type="Texture2D" uid="uid://ni64oky6nphi" path="res://pages/workshop/part_controls/rotate.png" id="7_8uo18"]
[ext_resource type="Texture2D" uid="uid://c8ieoxpurelc0" path="res://assets/images/smooth_line_texture.png" id="8_wj0yv"]
[ext_resource type="Texture2D" uid="uid://dacwkt2vqhxia" path="res://pages/workshop/part_controls/flip.png" id="9_kvlm4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_esskj"]
shader = ExtResource("2_1py4e")

[node name="PartControls" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_dn1f3")

[node name="OutlineSpriteContainer" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0

[node name="OutlineSprite" type="TextureRect" parent="OutlineSpriteContainer"]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_esskj")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -54.0
offset_right = 64.0
offset_bottom = 54.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_6h11j")
stretch_mode = 5

[node name="ButtonsMargin" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 72.0
offset_right = 100.0
offset_bottom = 136.0
grow_horizontal = 2
mouse_filter = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ButtonsMargin"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 20

[node name="RotateButton" type="TextureButton" parent="ButtonsMargin/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_y4x1s")
texture_pressed = ExtResource("5_tnput")
texture_hover = ExtResource("6_usps7")

[node name="RotateIconCenterer" type="CenterContainer" parent="ButtonsMargin/HBoxContainer/RotateButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
use_top_left = true

[node name="RotateIconContainer" type="Control" parent="ButtonsMargin/HBoxContainer/RotateButton/RotateIconCenterer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="ButtonsMargin/HBoxContainer/RotateButton/RotateIconCenterer/RotateIconContainer"]
layout_mode = 2
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("7_8uo18")

[node name="Line2D" type="Line2D" parent="ButtonsMargin/HBoxContainer/RotateButton/RotateIconCenterer"]
unique_name_in_owner = true
z_index = 1
texture_filter = 2
points = PackedVector2Array(0, 0, 50, 0)
width = 4.0
default_color = Color(0, 1, 0.501961, 0.501961)
texture = ExtResource("8_wj0yv")
texture_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="FlipButton" type="TextureButton" parent="ButtonsMargin/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("4_y4x1s")
texture_pressed = ExtResource("5_tnput")
texture_hover = ExtResource("6_usps7")

[node name="CenterContainer" type="CenterContainer" parent="ButtonsMargin/HBoxContainer/FlipButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.75, 0.75)
use_top_left = true

[node name="FlipIcon" type="TextureRect" parent="ButtonsMargin/HBoxContainer/FlipButton/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("9_kvlm4")

[connection signal="button_down" from="ButtonsMargin/HBoxContainer/RotateButton" to="." method="_on_rotate_button_button_down"]
[connection signal="button_up" from="ButtonsMargin/HBoxContainer/RotateButton" to="." method="_on_rotate_button_button_up"]
[connection signal="gui_input" from="ButtonsMargin/HBoxContainer/RotateButton" to="." method="_on_rotate_button_gui_input"]
[connection signal="pressed" from="ButtonsMargin/HBoxContainer/FlipButton" to="." method="_on_flip_button_pressed"]
